<resources>
    <string name="app_name">AppCcDosto</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Castañon Software Universe</string>
    <string name="nav_header_subtitle">e.c2.castanon@gmail.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_location">Location</string>
    <string name="menu_about">About</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Contact Us</string>
    <string name="menu_chat">Chat</string>

    <string name="fragment_home">Home</string>
    <string name="fragment_gallery">Gallery</string>
    <string name="fragment_location">Location</string>
    <string name="fragment_about">About</string>
    <string name="fragment_share">Share</string>
    <string name="fragment_send">Contact Us</string>
    <string name="fragment_chat">Chat</string>
    <string name="title_activity_location_fragment">Map</string>
    <string name="fragment_settings">Settings</string>

    <string name="send_support">Support &amp; Feedback</string>
    <string name="send_support2">Christian Arturo Castañon Herrera</string>
    <string name="send_support3">Location: Aguascalientes, MX</string>
    <string name="send_support4">MX: +52 449 412 76 44</string>
    <string name="send_support5">Email: e.c2.castanon@gmail.com</string>

    <string name="cv_description">A challenging position in Information Technology that will present me with ventures to utilize my computer knowledge and working skills, with opportunities for long-term career development.
        I have the ambition to progress and hopefully get better.</string>
    <string name="title_activity_maps">Map</string>


    <string name="name">Name</string>
    <string name="phone">Phone</string>
    <string name="course">Course</string>
    <string name="campus">Campus</string>
    <string name="comments">Comments</string>
    <string name="rate">Rate this App</string>
    <string name="Communicate">Communicate</string>
    <string name="check_conecction">is connected?</string>

</resources>